--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=admin
+DB_DATABASE=admin_
 DB_USERNAME=metro_payfast
 DB_PASSWORD=3Lyc$9*64EVo
 
